_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: myingress.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-ui
            port: 
              number: 3001
      - pathType: Prefix
        path: "/product-service"
        backend:
          service:
            name: product-service
            port: 
              number: 3002
      - pathType: Prefix
        path: "/order-service"
        backend:
          service:
            name: order-service
            port: 
              number: 3003
      - pathType: Prefix
        path: "/basket-service"
        backend:
          service:
            name: basket-service
            port: 
              number: 3004
